--- a/index.html
+++ b/index.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="style.css" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Clock</h1>
-    <div class="dateElement">date</div>
-    <div class="container">
-        <div class="box hour">00</div>
-        <span class="sub">hr</span>
-        <div class="box min">00</div>
-        <span class="sub">min</span>
-        <div class="box sec">00</div>
-        <span class="sub">sec</span>
-        <div class="box session">AM</div>
+    <div class="main">
+        <h1>Text Editior</h1>
+        <div class="container">
+            <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident temporibus qui consequuntur reiciendis
+                obcaecati soluta officiis eaque, rem cupiditate impedit ipsum, distinctio beatae eos error ad quisquam
+                quibusdam dolorum corrupti sed. Debitis natus fugit quis incidunt, quibusdam harum esse. Tempore modi
+                quam excepturi saepe laboriosam doloremque expedita repellendus quis minus provident quidem eos, iusto
+                delectus voluptas, sunt commodi a. Ullam id quae consequuntur beatae cum suscipit debitis officia
+                repellat, fugiat in dolores ipsa libero voluptate aspernatur maxime. Nam quis a libero, dicta enim sunt
+                nulla, commodi consequatur ex modi molestiae accusamus blanditiis obcaecati non dolores hic dolore
+                doloremque eum fugiat?</p>
+        </div>
+
+        <button class="btn" id="bold">Bold</button>
+        <button class="btn" id="italic">Italic</button>
+        <button class="btn" id="underline">Underline</button>
+        <button class="btn" id="left">Left</button>
+        <button class="btn" id="right">Right</button>
+        
     </div>
+
     <script src="script.js"></script>
 </body>
+
 </html>
