--- a/timer/index.html
+++ b/timer/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="timer.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Clock</h1>
-    <div class="dateElement">date</div>
+    <h1>Timer Till , 14 August</h1>
     <div class="container">
+        <div class="box day">00</div>
+        <span class="sub">day</span>
         <div class="box hour">00</div>
         <span class="sub">hr</span>
         <div class="box min">00</div>
         <span class="sub">min</span>
         <div class="box sec">00</div>
         <span class="sub">sec</span>
-        <div class="box session">AM</div>
     </div>
-    <script src="script.js"></script>
+    <script src="timer.js"></script>
 </body>
 </html>
