--- a/product/index.html
+++ b/product/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link href="style.css" rel="stylesheet">
+  <link href="product.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" , rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -21,7 +21,7 @@
   </div>
 
 
-  <script src="script.js"></script>
+  <script src="product.js"></script>
 </body>
 
 </html>
