--- a/todolist/index.html
+++ b/todolist/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="list.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
         </ul>
     </div>
 
-    <script src="script.js"></script>
+    <script src="list.js"></script>
 </body>
 
 </html>
